--- a/templates/index.html
+++ b/templates/index.html
@@ -1,10 +1,31 @@
-{% extends 'layout.html' %}
+{% extends "base.html" %}
 
 {% block content %}
-<h1>Главная</h1>
-<ul>
-    {% for user in list %}
-        <li>{{ user.email }}</li>
-    {% endfor %}
-</ul>
+<h1 class="text-center mb-4">Добавить контакт</h1>
+<div class="card">
+    <div class="card-body">
+        <form id="data-form" class="mb-3">
+            <div class="form-group">
+                <label for="fio">ФИО</label>
+                <input type="text" id="fio" class="form-control" placeholder="Введите ФИО">
+            </div>
+            <div class="form-group">
+                <label for="email">Email</label>
+                <input type="email" id="email" class="form-control" placeholder="Введите email">
+            </div>
+            <div class="form-group">
+                <label for="phone">Телефон</label>
+                <input type="text" id="phone" class="form-control" placeholder="Введите номер телефона">
+            </div>
+            <div class="form-group">
+                <label for="city">Город</label>
+                <input type="text" id="city" class="form-control" placeholder="Введите город">
+            </div>
+            <button type="submit" class="btn btn-primary">Отправить</button>
+        </form>
+        <button id="test-button" class="btn btn-secondary">Тест</button>
+    </div>
+</div>
+
+<script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
