--- a/templates/base.html
+++ b/templates/base.html
@@ -45,7 +45,7 @@
         <!-- Добавляем футер -->
         <footer class="footer py-3 bg-dark text-white text-center">
             <div class="container">
-                <span class="text-muted">&copy; 2024 Телефонная книга. Все права защищены.</span>
+                <span class="text-muted">&copy; Телефонная книга</span>
             </div>
         </footer>
     </div>
