--- a/templates/board.html
+++ b/templates/board.html
@@ -7,7 +7,7 @@
         <pre id="data-board" class="bg-light p-3"></pre>
     </div>
 </div>
-<button id="purge-button" class="btn btn-danger" style="margin-top: 20px;">Очистить данные</button>
+<button id="purge-button" class="btn btn-danger btn-press" style="margin-top: 20px;">Очистить данные</button>
 
 <script src="{{ url_for('static', filename='js/board.js') }}"></script>
 {% endblock %}
