--- a/templates/index.html
+++ b/templates/index.html
@@ -21,11 +21,12 @@
                 <label for="city">Город</label>
                 <input type="text" id="city" class="form-control" placeholder="Введите город">
             </div>
-            <button type="submit" class="btn btn-primary">Отправить</button>
+            <button type="submit" class="btn btn-primary btn-press">Отправить</button>
         </form>
-        <button id="test-button" class="btn btn-secondary">Тест</button>
+        <button id="test-button" class="btn btn-secondary btn-press">Тест</button>
     </div>
 </div>
 
 <script src="{{ url_for('static', filename='js/index.js') }}"></script>
 {% endblock %}
+
