--- a/templates/base.html
+++ b/templates/base.html
@@ -21,12 +21,22 @@
         #content-wrap {
             flex: 1 0 auto; /* Это позволяет контенту занимать оставшееся пространство */
         }
+        /* Стили для кнопок с эффектом нажатия */
+        .btn-press {
+            transition: transform 0.2s;
+        }
+        .btn-press:active {
+            transform: scale(0.95);
+        }
     </style>
 </head>
 <body>
     <div id="page-container">
         <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-            <div class="collapse navbar-collapse">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav mr-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('main.home') }}">Добавить контакт</a>
@@ -44,8 +54,8 @@
 
         <!-- Добавляем футер -->
         <footer class="footer py-3 bg-dark text-white text-center">
-            <div class="container">
-                <span class="text-muted">&copy; Телефонная книга</span>
+            <div>
+                <span style="color: #ffffff">Телефонная книга</span>
             </div>
         </footer>
     </div>
